--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <base href="/">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="assets/InstaRand/icon.ico" rel="icon" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;900&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-  <title>Karim CHARLEUX - Porfolio</title>
-</head>
-<body>
-<app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <base href="/">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="assets/InstaRand/icon.ico" rel="icon" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/procrastinating-pixie" rel="stylesheet">
+    <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
+    <title>Karim CHARLEUX - Porfolio</title>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
